<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopActivity">

    <ImageView
        android:id="@+id/booster_1_image"
        android:layout_width="192dp"
        android:layout_height="240dp"
        app:layout_constraintEnd_toStartOf="@+id/booster_2_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/booster_3_image"
        app:srcCompat="@drawable/booster_1"
        android:contentDescription="@string/booster_1_image" />

    <ImageView
        android:id="@+id/booster_2_image"
        android:layout_width="192dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toTopOf="@+id/booster_4_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/booster_2"
        android:contentDescription="@string/booster_2_image" />

    <ImageView
        android:id="@+id/booster_3_image"
        android:layout_width="192dp"
        android:layout_height="240dp"
        app:layout_constraintEnd_toStartOf="@+id/booster_4_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booster_1_image"
        app:srcCompat="@drawable/booster_3"
        android:contentDescription="@string/booster_3_image" />

    <ImageView
        android:id="@+id/booster_4_image"
        android:layout_width="192dp"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/booster_3_image"
        app:layout_constraintTop_toBottomOf="@+id/booster_2_image"
        app:srcCompat="@drawable/booster_4"
        android:contentDescription="@string/booster_4_image" />

    <Button
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/booster_4_text"
        app:layout_constraintStart_toEndOf="@+id/booster_3_text"
        app:layout_constraintTop_toBottomOf="@+id/booster_4_text" />

    <TextView
        android:id="@+id/booster_1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_5_min_200_gold"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/booster_3_image"
        app:layout_constraintEnd_toStartOf="@+id/booster_2_image"
        app:layout_constraintStart_toStartOf="@+id/booster_1_image" />

    <TextView
        android:id="@+id/booster_2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_10_min_380_gold"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/booster_4_image"
        app:layout_constraintEnd_toEndOf="@+id/booster_2_image"
        app:layout_constraintStart_toStartOf="@+id/booster_2_image" />

    <TextView
        android:id="@+id/booster_3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_15_min_540_gold"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/booster_3_image"
        app:layout_constraintEnd_toStartOf="@+id/booster_4_image"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/booster_4_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_20_min_680_gold"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/booster_4_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/booster_4_image" />

</android.support.constraint.ConstraintLayout>